--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Ectalite's Repo</h1>
+	<h1><img src="unicorn.jpeg"> Ectalite's Repo</h1>
 </div>
 
 <div class="container">
